Fix config path

--- a/charts/s3-monitoring/templates/deployment.yaml
+++ b/charts/s3-monitoring/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
         image: sheitag/s3df
         resources: {}
         volumeMounts:
-        - mountPath: /app/s3df.conf
+        - mountPath: /app/conf
           name: config-file
           readOnly: true
         - mountPath: /app/html
