--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -50,6 +50,8 @@ prometheusOperator:
     enabled: true
     baseUrl: my.domain
     # annotations: {}
+  prometheusNodeExporter:
+    hostNetwork: true
   alertmanager:
     enabled: true
     ingress: {}
