--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -17,7 +17,7 @@ spec:
         coreDns:
           {{- toYaml . | nindent 10 }}
         {{- end }}
-        {{- with .kublets }}
+        {{- with .kubelet }}
         kubelet:
           {{- toYaml . | nindent 10 }}
         {{- end }}
