Typo fix in values.yaml

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -86,7 +86,7 @@ prometheusOperator:
     # - name: example
     #   mountPath: /etc/example
     #   configMap: example
-    #   readonly: true
+    #   readOnly: true
   prometheus:
     enabled: true
     crunchyPostgresExporter:
