--- a/charts/she-runtime/templates/prometheus.yaml
+++ b/charts/she-runtime/templates/prometheus.yaml
@@ -108,10 +108,12 @@ spec:
             datasources:
               enabled: true
               env:
+                SKIP_TLS_VERIFY: 'true'
                 REQ_SKIP_TLS_VERIFY: 'true'
             dashboards:
               enabled: true
               env:
+                SKIP_TLS_VERIFY: 'true'
                 REQ_SKIP_TLS_VERIFY: 'true'
               label: grafana_dashboard
           {{- with .grafana.extraConfigmapMounts }}
