--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -178,3 +178,19 @@ velero:
     helm:
       values: |
 
+metrics:
+  namespace: kube-system
+  name: metrics
+  enabled: false
+  source:
+    repoURL: https://kubernetes-sigs.github.io/metrics-server
+    targetRevision: 3.10.0
+    chart: metrics-server
+    helm:
+      values: |
+        defaultArgs:
+          - --cert-dir=/tmp
+          - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
+          - --kubelet-use-node-status-port
+          - --metric-resolution=15s
+          - --kubelet-insecure-tls
