Added weight to podAntiAffinity in elasticsearch

--- a/charts/logging/values.yaml
+++ b/charts/logging/values.yaml
@@ -57,6 +57,7 @@ elasticsearch:
                       values:
                         - elasticsearch
                 topologyKey: kubernetes.io/hostname
+                weight: 100
 
         containers:
         - name: elasticsearch
