--- a/charts/logging/templates/serviceaccount.yaml
+++ b/charts/logging/templates/serviceaccount.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "logging.fullname" . }}
+  name: filebeat
   labels:
     {{- include "logging.labels" . | nindent 4 }}
