Feat/extra secret mounts (#26)
* feat(helm-chart): Add support for extraSecretMount

* updated version and added changelog

* fix typo

---------

Co-authored-by: „Henry <„henry.kaess@she.net>

--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -87,6 +87,12 @@ prometheusOperator:
     #   mountPath: /etc/example
     #   configMap: example
     #   readOnly: true
+    # extraSecretMounts:
+    # - name: example-name
+    #   mountPath: /etc/example
+    #   secretName: exmple
+    #   readOnly: true
+    #   defaultMode: 0440
   prometheus:
     enabled: true
     crunchyPostgresExporter:
