--- a/charts/she-runtime/values.yaml
+++ b/charts/she-runtime/values.yaml
@@ -10,7 +10,7 @@ sealedSecrets:
   enabled: true
   source:
     repoURL: https://charts.bitnami.com/bitnami
-    targetRevision:  1.0.10
+    targetRevision: 1.5.1 
     chart: sealed-secrets
 
 postgresOperator:
@@ -20,7 +20,7 @@ postgresOperator:
   source:
     repoURL: https://github.com/SHE-Informationstechnologie/postgres-operator-examples.git
     path: kustomize/install
-    targetRevision: 5.3.1-she
+    targetRevision: 5.3.1-she-3
 
 customerApplications:
   enabled: false
@@ -39,7 +39,7 @@ eckOperator:
   enabled: false
   source:
     repoURL: https://helm.elastic.co
-    targetRevision:  2.6.1
+    targetRevision:  2.9.0
     chart: eck-operator
 
 prometheusOperator:
@@ -110,7 +110,7 @@ prometheusOperator:
   # defaultRules: {}
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
-    targetRevision: 44.3.0
+    targetRevision: 50.3.1
     chart: kube-prometheus-stack
     helm:
       values: |
@@ -121,7 +121,7 @@ internalIngressController:
   enabled: true
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
-    targetRevision: 4.4.2
+    targetRevision: 4.7.1
     chart: ingress-nginx
     helm:
       parameters:
@@ -139,7 +139,7 @@ publicIngressController:
   enabled: true
   source:
     repoURL: https://kubernetes.github.io/ingress-nginx
-    targetRevision: 4.4.2
+    targetRevision: 4.7.1
     chart: ingress-nginx
     helm:
       parameters:
@@ -152,7 +152,7 @@ argoApp:
   enabled: false
   source:
     repoURL: https://argoproj.github.io/argo-helm
-    targetRevision: 5.19.12
+    targetRevision: 5.45.1
     chart: argo-cd
     helm:
       parameters:
@@ -165,7 +165,7 @@ velero:
   enabled: true
   initContainers:
   - name: velero-plugin-for-aws
-    image: velero/velero-plugin-for-aws:v1.5.0
+    image: velero/velero-plugin-for-aws:v1.8.0
     imagePullPolicy: IfNotPresent
     volumeMounts:
     - mountPath: /target
@@ -179,7 +179,7 @@ velero:
       memory: 512Mi
   source:
     repoURL: https://vmware-tanzu.github.io/helm-charts
-    targetRevision: 2.32.1
+    targetRevision: 5.0.2
     chart: velero
     helm:
       values: |
@@ -190,7 +190,7 @@ metrics:
   enabled: false
   source:
     repoURL: https://kubernetes-sigs.github.io/metrics-server
-    targetRevision: 3.10.0
+    targetRevision: 3.11.0
     chart: metrics-server
     helm:
       values: |
