--- a/charts/kyverno-policies/values.yaml
+++ b/charts/kyverno-policies/values.yaml
@@ -3,5 +3,5 @@ policies:
     enabled: true
     action: Enforce
     message: |-
-      If you want to delete it anyways make sure to ove the kubernetes.she.net/protected label
+      If you want to delete it anyways make sure to remove the kubernetes.she.net/protected label
 
